@@ -55,11 +55,11 @@ session_length = 900
 stream_length = 3600
 
 ; This length defines how long a 'remember me' session and cookie will 
-; last, the default is 900, same as length. It is up to the administrator
+; last, the default is 3600, same as length. It is up to the administrator
 ; of the box to increase this, for reference 86400 = 1 day 
 ; 604800 = 1 week and 2419200 = 1 month
-; DEAFULT: 900
-remember_length = 900
+; DEAFULT: 3600
+remember_length = 3600
 
 ; Name of the Session/Cookie that will sent to the browser
 ; default should be fine
