@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha3 
+	- Added Delete to Playlist and Live Streams (Radio)
+	- Massive improvements to CSS (Thx Spocky) 
+	- Addition of Greysme theme (Thx Spocky)
 	- Based MPD Support Restored
 	- Moved catalog stats off to statistics page
 	- Added basic sorting to all browse pages
